# LeetCoach

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CREDITS.md  README.md  SECURITY.md  app.py  classifier.py  claude_cli.py  config.py  conftest.py  parsing.py  proc_util.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt  sandbox.py  setup.ps1  storage.py  topic_index.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: smoke_claude.py
static/: app.js  style.css
templates/: index.html
tests/: _helpers.py  test_boot.py  test_classifier.py  test_classifier_offpath.py  test_claude_cli.py  test_library.py  test_modes.py  test_parsing.py  test_prompts.py  test_sandbox.py  test_storage.py  test_topic_index.py  test_verify_detail.py  test_web.py
